@@ -18,17 +18,12 @@ import us.dot.its.jpo.conflictmonitor.monitor.models.events.minimum_data.MapMini
 import us.dot.its.jpo.conflictmonitor.monitor.models.events.minimum_data.SpatMinimumDataEvent;
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.LineString;
 import us.dot.its.jpo.geojsonconverter.pojos.geojson.map.ProcessedMap;
-import us.dot.its.jpo.ode.api.ReportBuilder;
-import us.dot.its.jpo.ode.api.accessors.assessments.ConnectionOfTravelAssessment.ConnectionOfTravelAssessmentRepository;
 import us.dot.its.jpo.ode.api.accessors.assessments.LaneDirectionOfTravelAssessment.LaneDirectionOfTravelAssessmentRepository;
-import us.dot.its.jpo.ode.api.accessors.assessments.SignalStateAssessment.StopLineStopAssessmentRepository;
-import us.dot.its.jpo.ode.api.accessors.assessments.SignalStateEventAssessment.SignalStateEventAssessmentRepository;
 import us.dot.its.jpo.ode.api.accessors.events.ConnectionOfTravelEvent.ConnectionOfTravelEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.IntersectionReferenceAlignmentEvent.IntersectionReferenceAlignmentEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.LaneDirectionOfTravelEvent.LaneDirectionOfTravelEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.MapBroadcastRateEvents.MapBroadcastRateEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.MapMinimumDataEvent.MapMinimumDataEventRepository;
-import us.dot.its.jpo.ode.api.accessors.events.SignalGroupAlignmentEvent.SignalGroupAlignmentEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.SignalStateConflictEvent.SignalStateConflictEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.SignalStateEvent.SignalStateEventRepository;
 import us.dot.its.jpo.ode.api.accessors.events.SignalStateStopEvent.SignalStateStopEventRepository;
@@ -38,7 +33,6 @@ import us.dot.its.jpo.ode.api.accessors.events.TimeChangeDetailsEvent.TimeChange
 import us.dot.its.jpo.ode.api.accessors.map.ProcessedMapRepository;
 
 import us.dot.its.jpo.ode.api.accessors.reports.ReportRepository;
-import us.dot.its.jpo.ode.api.accessors.spat.ProcessedSpatRepository;
 import us.dot.its.jpo.ode.api.models.ChartData;
 import us.dot.its.jpo.ode.api.models.ConnectionData;
 import us.dot.its.jpo.ode.api.models.ConnectionOfTravelData;
@@ -57,9 +51,6 @@ public class ReportService {
     ProcessedMapRepository processedMapRepo;
 
     @Autowired
-    ProcessedSpatRepository processedSpatRepo;
-
-    @Autowired
     SignalStateEventRepository signalStateEventRepo;
 
     @Autowired
@@ -75,9 +66,6 @@ public class ReportService {
     LaneDirectionOfTravelEventRepository laneDirectionOfTravelEventRepo;
 
     @Autowired
-    SignalGroupAlignmentEventRepository signalGroupAlignmentEventRepo;
-
-    @Autowired
     SignalStateConflictEventRepository signalStateConflictEventRepo;
 
     @Autowired
@@ -85,15 +73,6 @@ public class ReportService {
 
     @Autowired
     LaneDirectionOfTravelAssessmentRepository laneDirectionOfTravelAssessmentRepo;
-
-    @Autowired
-    ConnectionOfTravelAssessmentRepository connectionOfTravelAssessmentRepo;
-
-    @Autowired
-    StopLineStopAssessmentRepository signalStateAssessmentRepo;
-
-    @Autowired
-    SignalStateEventAssessmentRepository signalStateEventAssessmentRepo;
 
     @Autowired
     SpatMinimumDataEventRepository spatMinimumDataEventRepo;
@@ -113,7 +92,7 @@ public class ReportService {
     private List<String> cleanMissingElements(List<String> elements, boolean isMap) {
         return elements.stream()
                 .filter(element -> !(isMap && element.contains("connectsTo")))
-                .map(element -> element.trim())
+                .map(String::trim)
                 .collect(Collectors.toList());
     }
 
@@ -140,7 +119,7 @@ public class ReportService {
         // Retrieve the most recent ProcessedMap
         List<ProcessedMap<LineString>> processedMaps = processedMapRepo
                 .findProcessedMaps(processedMapRepo.getQuery(intersectionID, null, null, true, true));
-        ProcessedMap<LineString> mostRecentProcessedMap = processedMaps.isEmpty() ? null : processedMaps.get(0);
+        ProcessedMap<LineString> mostRecentProcessedMap = processedMaps.isEmpty() ? null : processedMaps.getFirst();
 
         // Process connection of travel data
         List<ConnectionData> validConnectionOfTravelData = new ArrayList<>();
@@ -183,19 +162,19 @@ public class ReportService {
         List<IDCount> spatBroadcastRateEventCount = spatBroadcastRateEventRepo
                 .getSpatBroadcastRateEventsByDay(intersectionID, startTime, endTime);
 
-        List<SpatMinimumDataEvent> latestSpatMinimumdataEvent = spatMinimumDataEventRepo
+        List<SpatMinimumDataEvent> spatMinimumDataEvents = spatMinimumDataEventRepo
                 .find(spatMinimumDataEventRepo.getQuery(intersectionID, startTime, endTime, true));
-        List<MapMinimumDataEvent> latestMapMinimumdataEvent = mapMinimumDataEventRepo
+        List<MapMinimumDataEvent> mapMinimumDataEvents = mapMinimumDataEventRepo
                 .find(mapMinimumDataEventRepo.getQuery(intersectionID, startTime, endTime, true));
 
         // Parse missing elements from minimum data events
-        List<String> latestMapMinimumDataEventMissingElements = latestMapMinimumdataEvent.isEmpty()
+        List<String> latestMapMinimumDataEventMissingElements = mapMinimumDataEvents.isEmpty()
                 ? Collections.emptyList()
-                : cleanMissingElements(latestMapMinimumdataEvent.get(0).getMissingDataElements(), true);
+                : cleanMissingElements(mapMinimumDataEvents.getFirst().getMissingDataElements(), true);
 
-        List<String> latestSpatMinimumDataEventMissingElements = latestSpatMinimumdataEvent.isEmpty()
+        List<String> latestSpatMinimumDataEventMissingElements = spatMinimumDataEvents.isEmpty()
                 ? Collections.emptyList()
-                : cleanMissingElements(latestSpatMinimumdataEvent.get(0).getMissingDataElements(), false);
+                : cleanMissingElements(spatMinimumDataEvents.getFirst().getMissingDataElements(), false);
 
         // Process lane direction of travel data
         List<LaneDirectionOfTravelReportData> laneDirectionOfTravelReportData = LaneDirectionOfTravelReportData
@@ -206,10 +185,10 @@ public class ReportService {
         double headingTolerance = 0.0;
         double distanceTolerance = 0.0;
         if (!laneDirectionOfTravelAssessmentCount.isEmpty()) {
-            LaneDirectionOfTravelAssessment mostRecentAssessment = laneDirectionOfTravelAssessmentCount.get(0);
+            LaneDirectionOfTravelAssessment mostRecentAssessment = laneDirectionOfTravelAssessmentCount.getFirst();
             if (!mostRecentAssessment.getLaneDirectionOfTravelAssessmentGroup().isEmpty()) {
                 LaneDirectionOfTravelAssessmentGroup group = mostRecentAssessment
-                        .getLaneDirectionOfTravelAssessmentGroup().get(0);
+                        .getLaneDirectionOfTravelAssessmentGroup().getFirst();
                 headingTolerance = group.getTolerance();
                 distanceTolerance = group.getDistanceFromCenterlineTolerance();
             }
@@ -227,70 +206,13 @@ public class ReportService {
         List<StopLinePassageReportData> stopLinePassageReportData = StopLinePassageReportData
                 .aggregateSignalStateEvents(signalStateEvents);
 
-        ByteArrayOutputStream stream = new ByteArrayOutputStream();
-
-        ReportBuilder builder = new ReportBuilder(stream);
-        List<String> dateStrings = builder.getDayStringsInRange(startTime, endTime);
-        builder.addTitlePage("Conflict Monitor Report", startTime, endTime);
-
-        // Add Lane Direction of Travel Information
-        builder.addTitle("Lane Direction of Travel");
-        builder.addLaneDirectionOfTravelEvent(DailyData.fromIDCountDays(laneDirectionOfTravelEventCounts, dateStrings));
-        builder.addLaneDirectionOfTravelMedianDistanceDistribution(
-                ChartData.fromIDCountList(laneDirectionOfTravelMedianDistanceDistribution));
-        builder.addLaneDirectionOfTravelMedianHeadingDistribution(
-                ChartData.fromIDCountList(laneDirectionOfTravelMedianHeadingDistribution));
-        builder.addDistanceFromCenterlineOverTime(laneDirectionOfTravelAssessmentCount);
-        builder.addHeadingOverTime(laneDirectionOfTravelAssessmentCount);
-        builder.addPageBreak();
-
-        // Add Lane Connection of Travel Information
-        builder.addTitle("Connection of Travel");
-        builder.addConnectionOfTravelEvent(DailyData.fromIDCountDays(connectionOfTravelEventCounts, dateStrings));
-        builder.addLaneConnectionOfTravelMap(laneConnectionCounts);
-        builder.addPageBreak();
-
-        // Add Signal State Events
-        builder.addTitle("Signal State Events");
-        builder.addSignalStateEvents(DailyData.fromIDCountDays(signalstateEventCounts, dateStrings));
-        builder.addSignalStateStopEvents(DailyData.fromIDCountDays(signalStateStopEventCounts, dateStrings));
-        builder.addSignalStateConflictEvent(DailyData.fromIDCountDays(signalStateConflictEventCounts, dateStrings));
-
-        // Add Time Change Details
-        builder.addSpatTimeChangeDetailsEvent(DailyData.fromIDCountDays(timeChangeDetailsEventCounts, dateStrings));
-        builder.addPageBreak();
-
-        // Add Intersection Reference Alignment Event Counts
-        builder.addTitle("Intersection Reference Alignment Event Counts");
-        builder.addIntersectionReferenceAlignmentEvents(
-                DailyData.fromIDCountDays(intersectionReferenceAlignmentEventCounts, dateStrings));
-        builder.addPageBreak();
-
-        // Add Map Broadcast Rate Events
-        builder.addTitle("MAP");
-        builder.addMapBroadcastRateEvents(DailyData.fromIDCountDays(mapBroadcastRateEventCount, dateStrings));
-        builder.addMapMinimumDataEvents(DailyData.fromIDCountDays(mapMinimumDataEventCount, dateStrings));
-        builder.addPageBreak();
-        builder.addMapMinimumDataEventErrors(latestMapMinimumdataEvent);
-        builder.addPageBreak();
-
-        // Add Map Broadcast Rate Events
-        builder.addTitle("SPaT");
-        builder.addSpatBroadcastRateEvents(DailyData.fromIDCountDays(spatBroadcastRateEventCount, dateStrings));
-        builder.addSpatMinimumDataEvents(DailyData.fromIDCountDays(spatMinimumDataEventCount, dateStrings));
-        builder.addPageBreak();
-        builder.addSpatMinimumDataEventErrors(latestSpatMinimumdataEvent);
-        builder.addPageBreak();
-
-        builder.write();
-
         ReportDocument doc = new ReportDocument();
         doc.setIntersectionID(intersectionID);
         doc.setRoadRegulatorID(roadRegulatorID);
         doc.setReportGeneratedAt(Instant.now().toEpochMilli());
         doc.setReportStartTime(startTime);
         doc.setReportStopTime(endTime);
-        doc.setReportContents(stream.toByteArray());
+        doc.setReportContents(new byte[]{});
         doc.setReportName(reportName);
         doc.setLaneDirectionOfTravelEventCounts(laneDirectionOfTravelEventCounts);
         doc.setLaneDirectionOfTravelMedianDistanceDistribution(laneDirectionOfTravelMedianDistanceDistribution);
